--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/card_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp">
 
